--- a/m/index.textile
+++ b/m/index.textile
@@ -9,6 +9,8 @@ h1. MIXING & MASTERING
 
 23 is now offereing cheap and quick mixing and mastering services to the general public. Having mastered all of his releases to date, and a number of other credits listed herein, 23 has the experience to make your mix and/or master stand up to that of other commercial releases.
 
+For mixing and mastering inquiries, please "Contact Me":/c
+
 h1. WHY?
 
 <hr />
@@ -18,17 +20,17 @@ There's a number of reasons you may want this. More often than not, you may just
 
 h3. Why Mixing?
 
-*You feel like you have a cohesive track, but are not sure how to make the tracks "work together"
+* You feel like you have a cohesive track, but are not sure how to make the tracks "work together"
 * You'd like a fresh set of ears to mix your track.
 * You suck at mixing.
 
 
 h3. Why Mastering?
 
-* You need a second set of ears to fine tune your track
-* You want your track to not sound soft or weak next to other tracks in your mix
-* You want your mix to translate better on other systems 
-* You want your EP/album to sound like they flow together
+* You need a second set of ears to fine tune your track.
+* You want your track to not sound soft or weak next to other tracks in your mix.
+* You want your mix to translate better on other systems.
+* You want the tracks in your EP/album to sound like they flow together.
 
 <br />
 
