--- a/sic/index.textile
+++ b/sic/index.textile
@@ -7,7 +7,7 @@ h1. MUSIC
 
  <hr />
 
-Most of my music can be found on my "Soundcloud":http:/soundcloud.com/23e.
+Most of my music can be found on my "Soundcloud":http://soundcloud.com/23e.
 
  <iframe width="100%" height="450" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Fusers%2F2116245&amp;auto_play=false&amp;show_artwork=true&amp;color=000000"></iframe>
 
